Tilføjet en masse stats til kampen. Tilføjet flere stats til spiller rating. Justeret rating formularen nøje + den virker faktisk og fixed AI summary af spillere så den ikke tripper. Ændret lidt css i match summary og fjernet last 5/form.